# comfyui-template-loader

./: README.md  __init__.py  nodes.py  pyproject.toml  server.py  template.py
.github/workflows/: publish.yml
js/: TemplateLoader.js
template/: situation.example.json
