[project]
name = "template-loader"
description = "Easily Load Your Frequently Used Prompts in ComfyUI\nWith ComfyUI Template Loader, managing and reusing your favorite prompts has never been simpler. Save time and streamline your workflow by loading your go-to templates with just a few clicks!"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/r3dsd/comfyui-template-loader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-template-loader"
Icon = ""
